--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-local": "^1.0.38",
+    "@types/pdfkit": "^0.17.2",
     "eslint": "^9.30.1",
     "parser": "^0.1.4",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.36.0"
   },
   "dependencies": {
+    "@react-pdf/pdfkit": "^4.0.3",
     "@types/ejs": "^3.1.5",
     "@types/multer": "^2.0.0",
     "@types/nodemailer": "^6.4.17",
@@ -52,6 +54,8 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "pdfkit": "^0.17.1",
+    "redis": "^5.6.1",
     "zod": "^3.25.76"
   }
 }
