--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
-    "lint": "npx eslint ./src"
+    "lint": "npx eslint ./src",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
